Finish work on rollupForceRecalculation LWC component to support Rollup__mdt shape refactor and selection of CMDT rows

--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -436,6 +436,7 @@ global without sharing virtual class Rollup implements Database.Batchable<SObjec
   global static String performFullRecalculation(
     Rollup__mdt metadata
   ) {
+    System.debug(metadata);
     FlowInput validationRuleWrapper = new FlowInput();
     validationRuleWrapper.rollupOperation = metadata.RollupOperation__c.toUpperCase();
     validationRuleWrapper.concatDelimiter = metadata.ConcatDelimiter__c;
